W98-0024: fix translations in StartBundle

--- a/src/Bundles/StartBundle/Locales/Start.locales.json
+++ b/src/Bundles/StartBundle/Locales/Start.locales.json
@@ -5,6 +5,8 @@
     "StartBundle.documents": "Documents",
     "StartBundle.find": "Find",
     "StartBundle.help": "Help",
+    "StartBundle.microsoft-exchange": "Microsoft Exchange",
+    "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
     "StartBundle.programs": "Programs",
     "StartBundle.run": "Run...",
     "StartBundle.settings": "Settings",
@@ -17,6 +19,8 @@
     "StartBundle.documents": "Dokumenty",
     "StartBundle.find": "Znajdź",
     "StartBundle.help": "Pomoc",
+    "StartBundle.microsoft-exchange": "Microsoft Exchange",
+    "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
     "StartBundle.programs": "Programy",
     "StartBundle.run": "Włącz...",
     "StartBundle.settings": "Ustawienia",
