--- a/src/Bundles/StartBundle/Locales/Start.locales.json
+++ b/src/Bundles/StartBundle/Locales/Start.locales.json
@@ -5,6 +5,7 @@
     "StartBundle.documents": "Documents",
     "StartBundle.find": "Find",
     "StartBundle.help": "Help",
+    "StartBundle.windows-logo": "Windows logo",
     "StartBundle.microsoft-exchange": "Microsoft Exchange",
     "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
     "StartBundle.programs": "Programs",
@@ -19,6 +20,7 @@
     "StartBundle.documents": "Dokumenty",
     "StartBundle.find": "Znajdź",
     "StartBundle.help": "Pomoc",
+    "StartBundle.windows-logo": "Windows logo",
     "StartBundle.microsoft-exchange": "Microsoft Exchange",
     "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
     "StartBundle.programs": "Programy",
