add notepad in start bundle

--- a/src/Bundles/StartBundle/Locales/Start.locales.json
+++ b/src/Bundles/StartBundle/Locales/Start.locales.json
@@ -8,6 +8,7 @@
     "StartBundle.windows-logo": "Windows logo",
     "StartBundle.microsoft-exchange": "Microsoft Exchange",
     "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
+    "StartBundle.notepad": "Notepad",
     "StartBundle.programs": "Programs",
     "StartBundle.run": "Run...",
     "StartBundle.settings": "Settings",
@@ -23,6 +24,7 @@
     "StartBundle.windows-logo": "Windows logo",
     "StartBundle.microsoft-exchange": "Microsoft Exchange",
     "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
+    "StartBundle.notepad": "Notatnik",
     "StartBundle.programs": "Programy",
     "StartBundle.run": "Włącz...",
     "StartBundle.settings": "Ustawienia",
