add tests and clean code for NotepadBundle

--- a/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
+++ b/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
@@ -1,8 +1,10 @@
 {
   "en": {
+    "Notepad.example": "This is an example!",
     "Notepad.title": "Notepad"
   },
   "pl": {
+    "Notepad.example": "To jest przykład!",
     "Notepad.title": "Notatnik"
   }
 }
