set media player in StartBundle and add icons

--- a/src/Bundles/StartBundle/Locales/Start.locales.json
+++ b/src/Bundles/StartBundle/Locales/Start.locales.json
@@ -3,11 +3,11 @@
     "StartBundle.accessories": "Accessories",
     "StartBundle.calculator": "Calculator",
     "StartBundle.documents": "Documents",
+    "StartBundle.entertainment": "Entertainment",
     "StartBundle.find": "Find",
     "StartBundle.help": "Help",
     "StartBundle.windows-logo": "Windows logo",
-    "StartBundle.microsoft-exchange": "Microsoft Exchange",
-    "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
+    "StartBundle.media-player": "Media Player",
     "StartBundle.notepad": "Notepad",
     "StartBundle.programs": "Programs",
     "StartBundle.run": "Run...",
@@ -19,11 +19,11 @@
     "StartBundle.accessories": "Akcesoria",
     "StartBundle.calculator": "Kalkulator",
     "StartBundle.documents": "Dokumenty",
+    "StartBundle.entertainment": "Rozrywka",
     "StartBundle.find": "Znajdź",
     "StartBundle.help": "Pomoc",
     "StartBundle.windows-logo": "Windows logo",
-    "StartBundle.microsoft-exchange": "Microsoft Exchange",
-    "StartBundle.ms-dos-prompt": "MS-DOS Prompt",
+    "StartBundle.media-player": "Media Player",
     "StartBundle.notepad": "Notatnik",
     "StartBundle.programs": "Programy",
     "StartBundle.run": "Włącz...",
