add component MediaPlayerVideo

--- a/src/Bundles/MediaPlayerBundle/Locales/MediaPlayer.locales.json
+++ b/src/Bundles/MediaPlayerBundle/Locales/MediaPlayer.locales.json
@@ -1,8 +1,8 @@
 {
   "en": {
-    "MediaPlayerBundle.title": "Media Player"
+    "MediaPlayer.title": "Media Player"
   },
   "pl": {
-    "MediaPlayerBundle.title": "Media Player"
+    "MediaPlayer.title": "Media Player"
   }
 }
