--- a/src/Bundles/SettingsBundle/Locales/Settings.locales.json
+++ b/src/Bundles/SettingsBundle/Locales/Settings.locales.json
@@ -1,10 +1,12 @@
 {
   "en": {
     "Settings.general": "General",
+    "Settings.languages": "Languages",
     "Settings.title": "Settings"
   },
   "pl": {
     "Settings.general": "Ogólne",
+    "Settings.languages": "Języki",
     "Settings.title": "Ustawienia"
   }
 }
