fix names in CalculatorBundle and CalendarBundle

--- a/src/Bundles/CalculatorBundle/Locales/Calculator.locales.json
+++ b/src/Bundles/CalculatorBundle/Locales/Calculator.locales.json
@@ -1,8 +1,8 @@
 {
   "en": {
-    "Calculator.title": "Calculator"
+    "CalculatorBundle.title": "Calculator"
   },
   "pl": {
-    "Calculator.title": "Kalkulator"
+    "CalculatorBundle.title": "Kalkulator"
   }
 }
