add button to save file

--- a/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
+++ b/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
@@ -1,10 +1,12 @@
 {
   "en": {
     "NotepadBundle.example": "This is an example!",
+    "NotepadBundle.save": "Save",
     "NotepadBundle.title": "Notepad"
   },
   "pl": {
     "NotepadBundle.example": "To jest przykład!",
+    "NotepadBundle.save": "Zapisz",
     "NotepadBundle.title": "Notatnik"
   }
 }
