add tests and more option

--- a/src/Bundles/FileBundle/Locales/File.locales.json
+++ b/src/Bundles/FileBundle/Locales/File.locales.json
@@ -7,6 +7,7 @@
     "FileBundle.save-as-type": "Save as type:",
     "FileBundle.text-csv": "CSV Document (*.csv)",
     "FileBundle.text-doc": "Word Document (*.doc)",
+    "FileBundle.text-rtf": "Rich text format (*.rtf)",
     "FileBundle.text-txt": "Text Document (*.txt)",
     "FileBundle.title-save": "Save as"
   },
@@ -18,6 +19,7 @@
     "FileBundle.save-as-type": "Zapisz jako typ:",
     "FileBundle.text-csv": "CSV Dokument (*.csv)",
     "FileBundle.text-doc": "Word Dokument (*.doc)",
+    "FileBundle.text-rtf": "Wzbogacony format tekstowy (*.rtf)",
     "FileBundle.text-txt": "Tekst Dokument (*.txt)",
     "FileBundle.title-save": "Zapisz jako"
   }
