delete unneeded package and add button open file

--- a/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
+++ b/src/Bundles/NotepadBundle/Locales/Notepad.locales.json
@@ -1,11 +1,13 @@
 {
   "en": {
     "NotepadBundle.example": "This is an example!",
+    "NotepadBundle.open": "Open",
     "NotepadBundle.save": "Save",
     "NotepadBundle.title": "Notepad"
   },
   "pl": {
     "NotepadBundle.example": "To jest przykład!",
+    "NotepadBundle.open": "Otwórz",
     "NotepadBundle.save": "Zapisz",
     "NotepadBundle.title": "Notatnik"
   }
