add component TicTacToeEnterYourName

--- a/src/Bundles/TicTacToeBundle/Locales/TicTacToe.locales.json
+++ b/src/Bundles/TicTacToeBundle/Locales/TicTacToe.locales.json
@@ -1,10 +1,14 @@
 {
   "en": {
     "TicTacToeBundle.choose-player": "Choose a player",
+    "TicTacToeBundle.enter-your-name": "Enter your name",
+    "TicTacToeBundle.default-player": "Default player",
     "TicTacToeBundle.title": "Tic Tac Toe"
   },
   "pl": {
     "TicTacToeBundle.choose-player": "Wybierz gracza",
+    "TicTacToeBundle.enter-your-name": "Wprowadź swoje imię",
+    "TicTacToeBundle.default-player": "Domyślny gracz",
     "TicTacToeBundle.title": "Kółko i krzyżyk"
   }
 }
