--- a/src/Bundles/TicTacToeBundle/Locales/TicTacToe.locales.json
+++ b/src/Bundles/TicTacToeBundle/Locales/TicTacToe.locales.json
@@ -2,6 +2,7 @@
   "en": {
     "TicTacToeBundle.choose-dimension": "Choose a dimension of the field",
     "TicTacToeBundle.choose-player": "Choose a player",
+    "TicTacToeBundle.computer": "Computer",
     "TicTacToeBundle.enter-your-name": "Enter your name",
     "TicTacToeBundle.default-player": "Default player",
     "TicTacToeBundle.start": "Start",
@@ -10,6 +11,7 @@
   "pl": {
     "TicTacToeBundle.choose-dimension": "Wybierz wymiar planszy",
     "TicTacToeBundle.choose-player": "Wybierz gracza",
+    "TicTacToeBundle.computer": "Komputer",
     "TicTacToeBundle.enter-your-name": "Wprowadź swoje imię",
     "TicTacToeBundle.default-player": "Domyślny gracz",
     "TicTacToeBundle.start": "Rozpocznij",
