add components and style in DocumentationBundle

--- a/src/Bundles/DocumentationBundle/Locales/Documentation.locales.json
+++ b/src/Bundles/DocumentationBundle/Locales/Documentation.locales.json
@@ -1,8 +1,10 @@
 {
   "en": {
-    "DocumentationBundle.title": "Documentation"
+    "DocumentationBundle.title": "Documentation",
+    "DocumentationBundle.icon-description": "Documentation icon"
   },
   "pl": {
-    "DocumentationBundle.title": "Dokumentacja"
+    "DocumentationBundle.title": "Dokumentacja",
+    "DocumentationBundle.icon-description": "Ikona dokumentacji"
   }
 }
