--- a/src/Bundles/CalendarBundle/Locales/Calendar.locales.json
+++ b/src/Bundles/CalendarBundle/Locales/Calendar.locales.json
@@ -1,6 +1,7 @@
 {
   "en": {
     "CalendarBundle.january": "January",
+    "CalendarBundle.description-content": "The Bundle is responsible for <b>calendar<b>",
     "CalendarBundle.february": "February",
     "CalendarBundle.march": "March",
     "CalendarBundle.april": "April",
@@ -12,6 +13,10 @@
     "CalendarBundle.october": "October",
     "CalendarBundle.november": "November",
     "CalendarBundle.december": "December",
+    "CalendarBundle.services-content-1": "showing days in calendar",
+    "CalendarBundle.services-content-2": "showing active day in calendar",
+    "CalendarBundle.services-content-3": "changing month in calendar",
+    "CalendarBundle.services-content-4": "changing year in calendar",
     "CalendarBundle.shortcut-monday": "M",
     "CalendarBundle.shortcut-tuesday": "T",
     "CalendarBundle.shortcut-wednesday": "W",
@@ -23,6 +28,7 @@
   },
   "pl": {
     "CalendarBundle.january": "Styczeń",
+    "CalendarBundle.description-content": "Bundle jest odpowiedzialny za <b>kalendarz<b>",
     "CalendarBundle.february": "Luty",
     "CalendarBundle.march": "Marzec",
     "CalendarBundle.april": "Kwiecień",
@@ -34,6 +40,10 @@
     "CalendarBundle.october": "Październik",
     "CalendarBundle.november": "Listopad",
     "CalendarBundle.december": "Grudzień",
+    "CalendarBundle.services-content-1": "pokazywanie dni w kalendarzu",
+    "CalendarBundle.services-content-2": "pokazywanie aktywnego dnia w kalendarzu",
+    "CalendarBundle.services-content-3": "zmiana miesiąca w kalendarzu",
+    "CalendarBundle.services-content-4": "zmiana roku w kalendarzu",
     "CalendarBundle.shortcut-monday": "P",
     "CalendarBundle.shortcut-tuesday": "W",
     "CalendarBundle.shortcut-wednesday": "Ś",
