--- a/src/Bundles/AppBundle/Locales/App.locales.json
+++ b/src/Bundles/AppBundle/Locales/App.locales.json
@@ -8,7 +8,7 @@
     "AppBundle.services-content-5": "mounting the application"
   },
   "pl": {
-    "AppBundle.description-content": "Bundle odpowiedzialny za tworzenie the <a href='https://vuejs.org/guide/essentials/application.html#creating-a-vue-application'>Aplikacji Vue</a>",
+    "AppBundle.description-content": "Bundle odpowiedzialny za tworzenie <a href='https://vuejs.org/guide/essentials/application.html#creating-a-vue-application'>Aplikacji Vue</a>",
     "AppBundle.services-content-1": "tworzenie aplikacji",
     "AppBundle.services-content-2": "tworzenie pinia w aplikacji",
     "AppBundle.services-content-3": "tworzenie i18n w aplikacji",
