--- a/src/Bundles/DocumentationBundle/Locales/Documentation.locales.json
+++ b/src/Bundles/DocumentationBundle/Locales/Documentation.locales.json
@@ -1,14 +1,18 @@
 {
   "en": {
     "DocumentationBundle.description": "Description",
+    "DocumentationBundle.description-content": "The Bundle is reponsible for show the <b>documentation</b>",
     "DocumentationBundle.title": "Documentation",
     "DocumentationBundle.icon-description": "Documentation icon",
-    "DocumentationBundle.services": "Services"
+    "DocumentationBundle.services": "Services",
+    "DocumentationBundle.services-content-1": "showing documentation of bundles"
   },
   "pl": {
     "DocumentationBundle.description": "Opis",
+    "DocumentationBundle.description-content": "Bundle odpowiedzialny za pokazywanie <b>dokumentacji</b>",
     "DocumentationBundle.title": "Dokumentacja",
     "DocumentationBundle.icon-description": "Ikona dokumentacji",
-    "DocumentationBundle.services": "Usługi"
+    "DocumentationBundle.services": "Usługi",
+    "DocumentationBundle.services-content-1": "pokazywanie dokumentacji bundli"
   }
 }
