--- a/src/Bundles/SettingsBundle/Locales/Settings.locales.json
+++ b/src/Bundles/SettingsBundle/Locales/Settings.locales.json
@@ -1,6 +1,12 @@
 {
   "en": {
     "Settings.browser": "Browser",
+    "SettingsBundle.description-content": "The Bundle responsible for the settings",
+    "SettingsBundle.services-content-1": "information about user device",
+    "SettingsBundle.services-content-2": "calendar",
+    "SettingsBundle.services-content-3": "timezone",
+    "SettingsBundle.services-content-4": "change language",
+    "SettingsBundle.services-content-5": "change theme",
     "Settings.date-time": "Date & Time",
     "Settings.desktop": "Desktop",
     "Settings.device": "Device",
@@ -12,6 +18,12 @@
   },
   "pl": {
     "Settings.browser": "Przeglądarka",
+    "SettingsBundle.description-content": "Bundle odpowiedzialny za zarządzanie ustawieniami",
+    "SettingsBundle.services-content-1": "informację o sprzęcie użytkownika",
+    "SettingsBundle.services-content-2": "kalendarz",
+    "SettingsBundle.services-content-3": "strefa czasowa",
+    "SettingsBundle.services-content-4": "zmiana języka",
+    "SettingsBundle.services-content-5": "zmiana tła",
     "Settings.date-time": "Data & Czas",
     "Settings.desktop": "Pulpit",
     "Settings.device": "Urządzenie",
