--- a/src/Bundles/StartBundle/Locales/Start.locales.json
+++ b/src/Bundles/StartBundle/Locales/Start.locales.json
@@ -1,6 +1,7 @@
 {
   "en": {
     "StartBundle.accessories": "Accessories",
+    "StartBundle.description-content": "The Bundle is program Start",
     "StartBundle.calculator": "Calculator",
     "StartBundle.documentation": "Documentation",
     "StartBundle.entertainment": "Entertainment",
@@ -11,6 +12,7 @@
     "StartBundle.notepad": "Notepad",
     "StartBundle.programs": "Programs",
     "StartBundle.run": "Run...",
+    "StartBundle.services-content-1": "show order list of all programs",
     "StartBundle.settings": "Settings",
     "StartBundle.shut-down": "Shut Down...",
     "StartBundle.start": "Start",
@@ -20,6 +22,7 @@
   "pl": {
     "StartBundle.accessories": "Akcesoria",
     "StartBundle.calculator": "Kalkulator",
+    "StartBundle.description-content": "Bundle jest programem Start",
     "StartBundle.documentation": "Dokumentacja",
     "StartBundle.entertainment": "Rozrywka",
     "StartBundle.find": "Znajdź",
@@ -29,6 +32,7 @@
     "StartBundle.notepad": "Notatnik",
     "StartBundle.programs": "Programy",
     "StartBundle.run": "Włącz...",
+    "StartBundle.services-content-1": "pokazywanie listy wszystkich programów",
     "StartBundle.settings": "Ustawienia",
     "StartBundle.shut-down": "Wyłącz...",
     "StartBundle.start": "Start",
