--- a/src/Bundles/TeleportBundle/Locales/Teleport.locales.json
+++ b/src/Bundles/TeleportBundle/Locales/Teleport.locales.json
@@ -1,6 +1,6 @@
 {
   "en": {
-    "TeleportBundle.description-content": "The Bundle is is a built-in component that allows us to \"teleport\" a part of a component's template into a DOM node that exists outside the DOM hierarchy of that component.",
+    "TeleportBundle.description-content": "The Bundle is a built-in component that allows us to \"teleport\" a part of a component's template into a DOM node that exists outside the DOM hierarchy of that component.",
     "TeleportBundle.services-content-1": "manage modals on top of the DOM"
   },
   "pl": {
