add component TimerModal

--- a/src/app/Bundles/Programs/TimerBundle/Locales/Timer.locales.json
+++ b/src/app/Bundles/Programs/TimerBundle/Locales/Timer.locales.json
@@ -3,24 +3,30 @@
     "TimerBundle.button.reset": "Reset",
     "TimerBundle.button.start": "Start",
     "TimerBundle.button.stop": "Stop",
+    "TimerBundle.close": "Close",
+    "TimerBundle.description-modal": "The timer has finished",
     "TimerBundle.presets.custom": "Custom",
     "TimerBundle.presets.fifteen-minutes": "15 min",
     "TimerBundle.presets.five-minutes": "5 min",
     "TimerBundle.presets.ten-minutes": "10 min",
     "TimerBundle.presets.three-minutes": "3 min",
     "TimerBundle.presets.title": "Presets",
-    "TimerBundle.title": "Timer"
+    "TimerBundle.title": "Timer",
+    "TimerBundle.title-modal": "Status"
   },
   "pl": {
     "TimerBundle.button.reset": "Reset",
     "TimerBundle.button.start": "Start",
     "TimerBundle.button.stop": "Stop",
+    "TimerBundle.close": "Zamknij",
+    "TimerBundle.description-modal": "Minutnik zakończył pracę",
     "TimerBundle.presets.custom": "Niestandardowe",
     "TimerBundle.presets.fifteen-minutes": "15 min",
     "TimerBundle.presets.five-minutes": "5 min",
     "TimerBundle.presets.ten-minutes": "10 min",
     "TimerBundle.presets.three-minutes": "3 min",
     "TimerBundle.presets.title": "Presety",
-    "TimerBundle.title": "Minutnik"
+    "TimerBundle.title": "Minutnik",
+    "TimerBundle.title-modal": "Status"
   }
 }
